5422.	[bug]		When using dnssec-policy, print correct keytiming
			metadata. [GL #1843]

5421.	[bug]		Fixed a race that could cause named to crash when
			looking up the nodename of an RBT node if the tree
			was modified. [GL #1857]

5420.	[bug]		Add missing isc_{mutex,conditional}_destroy calls
			that caused a memory leak on FreeBSD. [GL #1893]

5419.	[func]		"dig +qid=<num>" sets the query ID to an arbitrary
			value. "configure --enable-singletrace" allows
			trace logging of a single query when QID is set to 0.
			[GL #1851]

5418.	[bug]		delv failed to parse deprecated trusted-keys style
			trust anchors. [GL #1860]

5417.	[cleanup]	The code determining the advertised UDP buffer size in
			outgoing EDNS queries has been refactored to improve its
			clarity. [GL #1868]

5416.	[bug]		Fix a lock order inversion in unix/socket.c. [GL #1859]

5415.	[test]		Address race in dnssec system test that led to
			test failures. [GL #1852]

5414.	[test]		Adjust time allowed for journal truncation to occur
			in nsupdate system test to avoid test failure.
			[GL #1855]

5413.	[test]		Address race in autosign system test that led to
			test failures. [GL #1852]

5412.	[bug]		'provide-ixfr no;' fail to return up-to-date responses
			when the serial was greater than or equal to the
			current serial. [GL #1714]

5411.	[cleanup]	Refactoring of TCP accept code to use a single accept()
			and pass the accepted socket to child threads for
			processing. [GL !3320]

5410.	[func]		Add the ability to specify per-type record count
			limits in an "update-policy" statement, which
			are enforced when adding records via UPDATE.
			[GL #1657]

5409.	[performance]	When looking up NSEC3 data in a zone database, skip
			the check for empty non-terminal nodes; the NSEC3
			tree doesn't have any. [GL #1834]

5408.	[protocol]	Print Extended DNS Errors if present in OPT record.
			[GL #1835]

5407.	[func]		Zone timers are now exported via statistics channel.